# Online_Shop

./: .env.sample  README.md  article_fixture.json  category_fixture.json  fff.py  main.py  product_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/management/commands/: add_articles.py
blog/migrations/: 0001_initial.py  0002_alter_article_preview.py  0003_alter_article_preview.py  0004_alter_article_options.py
blog/template_tags/: my_tags.py
blog/templates/blog/: article_confirm_delete.html  article_create.html  article_detail.html  article_update.html  articles_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_name.py  0003_contact.py  0004_alter_product_image.py  0005_alter_product_image.py  0006_alter_product_image.py  0007_alter_product_image.py  0008_product_is_published.py  0009_alter_product_options.py  0010_product_owner.py
catalog/templates/catalog/: add_product.html  base.html  category.html  contacts.html  home.html  product_confirm_delete.html  product_form.html  single_product.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
html/: catalogue.html  category.html  contacts.html  main.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py  (+1 more)
users/migrations/: 0001_initial.py  0002_remove_customuser_username.py  0003_alter_customuser_options.py
users/templates/: base.html  login.html  logout.html  register.html
(+2 files in other folders)
