[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["Roman.Iastremskyi <iastremskyi010397@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"


[tool.poetry.group.lint.dependencies]
mypy = "^1.13.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.10.0"


[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.10"
ipython = "^8.30.0"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
